--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,10 +24,26 @@
 <activity android:label="Player Status" android:name=".PlayerStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop"></activity>
 <activity android:label="Create Member" android:name=".CreateMemberActivity"></activity>
 <activity android:label="Game Status" android:name=".GameStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop"></activity>
-<activity android:name=".DebugHomeActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:launchMode="singleTask" android:label="Exploding Debug" android:alwaysRetainTaskState="true" android:finishOnCloseSystemDialogs="false" android:finishOnTaskLaunch="false" android:clearTaskOnLaunch="false"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+<activity android:name=".DebugHomeActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:launchMode="singleTask" android:label="Exploding Debug" android:alwaysRetainTaskState="true" android:finishOnCloseSystemDialogs="false" android:finishOnTaskLaunch="false" android:clearTaskOnLaunch="false" android:icon="@drawable/debug"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
 </intent-filter>
 </activity>
+
+<!--  BEGIN ROBIN -->
+		<activity android:name="com.littlebighead.exploding.AddStoryView" 
+			android:label="@string/app_name" 
+			android:theme="@android:style/Theme.NoTitleBar" />	
+		<activity android:name="com.littlebighead.exploding.CommunityView" 
+			android:label="@string/app_name" 
+			android:theme="@android:style/Theme.NoTitleBar" />	
+		<activity android:name="com.littlebighead.exploding.TimeEventDialog" 
+			android:label="@string/app_name" 
+			android:theme="@android:style/Theme.NoTitleBar" />	
+		<activity android:name="com.littlebighead.exploding.CreateMemberView" 
+			android:label="@string/app_name" 
+			android:theme="@android:style/Theme.NoTitleBar" />	
+
+<!--  END ROBIN  -->
 </application>
 
 
