--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
 <category android:name="android.intent.category.LAUNCHER"></category>
 </intent-filter>
 </activity>
-<activity android:label="Game Map" android:name=".GameMapActivity"></activity>
+<activity android:label="Game Map" android:name=".GameMapActivity" android:launchMode="singleTop"></activity>
 <uses-library android:name="com.google.android.maps" android:required="true"></uses-library>
 <activity android:label="Player Status" android:name=".PlayerStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop"></activity>
 <activity android:label="Create Member" android:name=".CreateMemberActivity"></activity>
