--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,10 +14,7 @@
 
     <activity android:name=".ExplodingPreferences" android:label="Preferences" android:icon="@drawable/icon" android:allowTaskReparenting="false" android:launchMode="standard">
 </activity>
-<activity android:icon="@drawable/gps" android:name=".GpsStatusActivity" android:label="Gps Status" android:clearTaskOnLaunch="true" android:noHistory="true" android:enabled="true" android:exported="true" android:allowTaskReparenting="false" android:launchMode="singleTop"><intent-filter android:label="Gps Status">
-<action android:name="android.intent.action.MAIN"></action>
-<category android:name="android.intent.category.LAUNCHER"></category>
-</intent-filter>
+<activity android:icon="@drawable/gps" android:name=".GpsStatusActivity" android:label="Gps Status" android:clearTaskOnLaunch="true" android:noHistory="true" android:enabled="true" android:exported="true" android:allowTaskReparenting="false" android:launchMode="singleTop" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug">
 </activity>
 <activity android:label="Game Map" android:name=".GameMapActivity" android:launchMode="singleTop"></activity>
 <uses-library android:name="com.google.android.maps" android:required="true"></uses-library>
