--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,23 +4,23 @@
       android:versionName="1.1" android:versionCode="2">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".Application">
         <activity android:name=".HomeActivity"
-                  android:label="@string/app_name" android:alwaysRetainTaskState="true" android:icon="@drawable/icon" android:launchMode="singleTask">
+                  android:label="@string/app_name" android:alwaysRetainTaskState="true" android:icon="@drawable/icon" android:launchMode="singleTask" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-    <activity android:name=".ExplodingPreferences" android:label="Preferences" android:icon="@drawable/icon" android:allowTaskReparenting="false" android:launchMode="standard">
+    <activity android:name=".ExplodingPreferences" android:label="Preferences" android:icon="@drawable/icon" android:allowTaskReparenting="false" android:launchMode="standard" android:screenOrientation="portrait">
 </activity>
-<activity android:icon="@drawable/gps" android:name=".GpsStatusActivity" android:label="Gps Status" android:clearTaskOnLaunch="true" android:noHistory="true" android:enabled="true" android:exported="true" android:allowTaskReparenting="false" android:launchMode="singleTop" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug">
+<activity android:icon="@drawable/gps" android:name=".GpsStatusActivity" android:label="Gps Status" android:clearTaskOnLaunch="true" android:noHistory="true" android:enabled="true" android:exported="true" android:allowTaskReparenting="false" android:launchMode="singleTop" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:screenOrientation="portrait">
 </activity>
-<activity android:label="Game Map" android:name=".GameMapActivity" android:launchMode="singleTop"></activity>
+<activity android:label="Game Map" android:name=".GameMapActivity" android:launchMode="singleTop" android:screenOrientation="portrait"></activity>
 <uses-library android:name="com.google.android.maps" android:required="true"></uses-library>
-<activity android:label="Player Status" android:name=".PlayerStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop"></activity>
-<activity android:label="Create Member" android:name=".CreateMemberActivity"></activity>
-<activity android:label="Game Status" android:name=".GameStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop"></activity>
-<activity android:name=".DebugHomeActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:launchMode="singleTask" android:label="Exploding Debug" android:alwaysRetainTaskState="true" android:finishOnCloseSystemDialogs="false" android:finishOnTaskLaunch="false" android:clearTaskOnLaunch="false" android:icon="@drawable/debug"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+<activity android:label="Player Status" android:name=".PlayerStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop" android:screenOrientation="portrait"></activity>
+<activity android:label="Create Member" android:name=".CreateMemberActivity" android:screenOrientation="portrait"></activity>
+<activity android:label="Game Status" android:name=".GameStatusActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:allowTaskReparenting="true" android:launchMode="singleTop" android:screenOrientation="portrait"></activity>
+<activity android:name=".DebugHomeActivity" android:taskAffinity="uk.ac.horizon.ug.exploding.client.debug" android:launchMode="singleTask" android:label="Exploding Debug" android:alwaysRetainTaskState="true" android:finishOnCloseSystemDialogs="false" android:finishOnTaskLaunch="false" android:clearTaskOnLaunch="false" android:icon="@drawable/debug" android:screenOrientation="portrait"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
 </intent-filter>
 </activity>
@@ -28,16 +28,16 @@
 <!--  BEGIN ROBIN -->
 		<activity android:name="com.littlebighead.exploding.AddStoryView" 
 			android:label="@string/app_name" 
-			android:theme="@android:style/Theme.NoTitleBar" />	
+			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
 		<activity android:name="com.littlebighead.exploding.CommunityView" 
 			android:label="@string/app_name" 
-			android:theme="@android:style/Theme.NoTitleBar" />	
+			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
 		<activity android:name="com.littlebighead.exploding.TimeEventDialog" 
 			android:label="@string/app_name" 
-			android:theme="@android:style/Theme.NoTitleBar" />	
+			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
 		<activity android:name="com.littlebighead.exploding.CreateMemberView" 
 			android:label="@string/app_name" 
-			android:theme="@android:style/Theme.NoTitleBar" />	
+			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
 
 <!--  END ROBIN  -->
 </application>
