--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="uk.ac.horizon.ug.exploding.client"
-      android:versionName="1.1" android:versionCode="2">
+<manifest package="uk.ac.horizon.ug.exploding.client"
+      android:versionName="1.2" android:versionCode="3" xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".Application">
         <activity android:name=".HomeActivity"
                   android:label="@string/app_name" android:alwaysRetainTaskState="true" android:icon="@drawable/icon" android:launchMode="singleTask" android:screenOrientation="portrait">
@@ -40,6 +39,7 @@
 			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
 
 <!--  END ROBIN  -->
+<activity android:name="com.littlebighead.exploding.TimeEventSmallDialog" android:theme="@android:style/Theme.Dialog" android:finishOnTaskLaunch="true" android:finishOnCloseSystemDialogs="true" android:launchMode="standard" android:clearTaskOnLaunch="true" android:screenOrientation="portrait"></activity>
 </application>
 
 
