Changes to client layouts. Added bigger/smaller buttons to member create screen. Tweaks.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,8 +29,8 @@
 			android:label="@string/app_name" 
 			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
 		<activity android:name="com.littlebighead.exploding.CommunityView" 
-			android:label="@string/app_name" 
-			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
+			android:label="Community" 
+			android:screenOrientation="portrait"/>	
 		<activity android:name="com.littlebighead.exploding.TimeEventDialog" 
 			android:label="@string/app_name" 
 			android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>	
