--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="uk.ac.horizon.ug.exploding.client"
-      android:versionName="1.2" android:versionCode="3" xmlns:android="http://schemas.android.com/apk/res/android">
+      xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="4" android:versionName="1.3L">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".Application">
-        <activity android:name=".HomeActivity" android:screenOrientation="portrait" android:launchMode="singleTop">
+        <activity android:name=".HomeActivity" android:screenOrientation="portrait" android:launchMode="singleTop" android:icon="@drawable/direct_icon" android:label="@string/direct_app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.BROWSABLE"></category>
@@ -10,7 +10,10 @@
 <!--  cannot use a string reference here, I think -->
 <data android:scheme="uk.ac.horizon.ug.exploding"/>
 </intent-filter>
-        </activity>
+        <intent-filter><action android:name="android.intent.action.MAIN"></action>
+<category android:name="android.intent.category.LAUNCHER"></category>
+</intent-filter>
+</activity>
 
     <activity android:name=".ExplodingPreferences" android:label="Preferences" android:icon="@drawable/icon" android:allowTaskReparenting="false" android:launchMode="standard" android:screenOrientation="portrait">
 </activity>
@@ -49,8 +52,8 @@
 <activity android:name="uk.ac.horizon.ug.lobby.androidclient.LobbyClientActivity" 
 		android:configChanges="orientation|keyboardHidden"
 
-                  android:label="@string/app_name" android:alwaysRetainTaskState="true" 
-                  android:icon="@drawable/icon" android:launchMode="singleTask">
+                  android:alwaysRetainTaskState="true" 
+                  android:launchMode="singleTask" android:icon="@drawable/lobby_icon" android:label="@string/lobby_app_name">
 
 	<intent-filter>
 		<action android:name="android.intent.action.MAIN"></action>
