--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="uk.ac.horizon.ug.exploding.client"
-      xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="5" android:versionName="1.3M">
+      xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.4" android:versionCode="6">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".Application">
         <activity android:name=".HomeActivity" android:screenOrientation="portrait" android:launchMode="singleTop" android:icon="@drawable/direct_icon" android:label="@string/direct_app_name">
             <intent-filter>
